[project]
name = "langforge"
version = "0.1.0"
description = "LangForge — Java code generation server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "ollama>=0.3.0",
]

[project.scripts]
langforge = "server:app"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
